more responsiveness changed. Should look decent on most PC screens and zoom levels but mobile is still terrible. I likely won't target that anytime soon

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "portfolio-app",
-	"homepage": "https://s-bogelund.github.io/Home",
+	"homepage": "https://www.home.simonbogelund.dk/",
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
